--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+		</dependency>
+
 		<!-- for test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -142,6 +147,7 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 		<!--cache end -->
+
 	</dependencies>
 
 	<build>
